Fix Firefox scrolling issue when using overflow-x clip

--- a/src/Modules/GrapesJS/resources/assets/sass/page-injection.scss
+++ b/src/Modules/GrapesJS/resources/assets/sass/page-injection.scss
@@ -1,3 +1,6 @@
+html, body {
+  overflow-x: initial !important;
+}
 form {
   margin-block-end: 0;
 }
